# job_folio

./: .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.yml  local.yml  manage.py  package-lock.json  package.json  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .django  .postgres
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/local/postgres/: Dockerfile  init-user-db.sh
compose/production/django/: Dockerfile  entrypoint
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
job_folio/: conftest.py
job_folio/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
job_folio/templates/: base.html
job_folio/users/: admin.py  apps.py  models.py  selectors.py  services.py  urls.py  views.py
job_folio/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
webpack/: common.config.js
